[package]
name = "tiny-tokio-actor"
version = "0.3.4"
edition = "2021"
authors = ["fdeantoni <fdeantoni@gmail.com>"]
license = "Apache-2.0"
keywords = ["tokio", "actors"]
description = "A simple and tiny actor library on top of tokio."
repository = "https://github.com/fdeantoni/tiny-tokio-actor"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
async-trait = "0.1"
backoff = "0.4"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
tokio-stream = "0.1.14"
uuid = { version = "1.4", features = ["v4"] }
warp = { version = "0.3" }
env_logger = "0.10"
dotenv = "0.15.0"